cd into test/data Signed-off-by: ashnamehrotra <ashnamehrotra@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,7 +31,9 @@ jobs:
         run: docker pull docker.io/library/nginx:1.21.6
       
       - name: Generate trivy vuln report for nginx image
-        run: trivy image --vuln-type os --ignore-unfixed -f json -o ${{ github.workspace }}/test/data/nginx.1.21.6.json docker.io/library/nginx:1.21.6
+        run: |
+          cd ${{ github.workspace }}/test/data
+          trivy image --vuln-type os --ignore-unfixed -f json -o nginx.1.21.6.json docker.io/library/nginx:1.21.6
 
       - name: Install Copa
         run: |
