--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -23,11 +23,23 @@ jobs:
             run: |
               git config user.name 'github-actions[bot]'
               git config user.email 'github-actions[bot]@users.noreply.github.com'
-          
-          - name: Create and push tag
+
+          - name: Generate and Push Tags
             run: |
-              git tag -a "${{ github.event.inputs.release_version }}" -m "${{ github.event.inputs.release_version }}"
-              git push --set-upstream origin "${{ github.event.inputs.release_version }}"
+              version=${{ github.event.inputs.tag }}
+              major=$(echo $version | cut -d. -f1)
+              minor=$(echo $version | cut -d. -f1-2)
+              patch=$(echo $version | cut -d. -f1-3 | cut -d. -f3)
+              
+              echo "Major version: $major"
+              echo "Minor version: $minor"
+              echo "Patch version: $patch"
+
+              git tag $version
+              git tag $minor
+              git tag $major -f
+
+              git push --set-upstream origin --tags
               
           - name: Create GitHub release
             env:
