force minor tag Signed-off-by: ashnamehrotra <ashnamehrotra@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,7 +36,7 @@ jobs:
               echo "Patch version: $patch"
 
               git tag $version
-              git tag $minor
+              git tag $minor -f
 
               git tag $major -f
 
