change to ashna repo
Signed-off-by: ashnamehrotra <ashnamehrotra@gmail.com>

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,7 +26,7 @@ jobs:
 
           - name: Get Latest Release
             run: |
-              LATEST=$(curl -s "https://api.github.com/repos/project-copacetic/copa-action/releases/latest" | jq -r .tag_name)
+              LATEST=$(curl -s "https://github.com/ashnamehrotra/copa-action/releases/latest" | jq -r .tag_name)
               echo "Latest release version: $LATEST"
 
           - name: Generate and Push Tags
