--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Bats Test
         run: |
-          docker buildx build --output type=local --build-arg copa_version=${COPA_VERSION} -t copa-action .
+          docker buildx build --output type=local,dest=./output --build-arg copa_version=${COPA_VERSION} -t copa-action .
           docker run --net=host \
             --mount=type=bind,source=/tmp,target=/data \
             --mount=type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock \
