--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,9 +41,6 @@ jobs:
             tar -zxvf copa.tar.gz
             cp copa /usr/local/bin/
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1 
-
       - name: Set up Docker
         uses: crazy-max/ghaction-setup-docker@v3
         with:
@@ -57,7 +54,7 @@ jobs:
 
       - name: Bats Test
         run: |
-          docker buildx build --build-arg copa_version=${COPA_VERSION} -t copa-action . --load
+          docker build --build-arg copa_version=${COPA_VERSION} -t copa-action .
           docker run --net=host \
             --mount=type=bind,source=/tmp,target=/data \
             --mount=type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock \
