set buildkit: true
Signed-off-by: ashnamehrotra <ashnamehrotra@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,7 +48,8 @@ jobs:
             {
               "debug": true,
               "features": {
-                "containerd-snapshotter": true
+                "containerd-snapshotter": true,
+                "buildkit": true
               }
             }
 
