--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,9 +47,9 @@ jobs:
           daemon-config: |
             {
               "debug": true,
+              "experimental": true,
               "features": {
-                "containerd-snapshotter": true,
-                "buildkit": true
+                "containerd-snapshotter": true
               }
             }
 
@@ -59,7 +59,7 @@ jobs:
       - name: Bats Test
         run: |
           docker info
-          docker build --build-arg copa_version=${COPA_VERSION} -t copa-action .
+          DOCKER_BUILDKIT=1 docker build --build-arg copa_version=${COPA_VERSION} -t copa-action .
           docker run --net=host \
             --mount=type=bind,source=/tmp,target=/data \
             --mount=type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock \
