--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,6 +52,11 @@ jobs:
                 "containerd-snapshotter": true
               }
             }
+      
+      - name: Get Socket Path
+        run: |
+          socket_path=docker context inspect | jq -r .[0].Endpoints.docker.Host
+          echo $socket_path
 
       - name: Print Docker Daemon Config
         run: docker info
@@ -59,10 +64,10 @@ jobs:
       - name: Bats Test
         run: |
           docker info
-          DOCKER_BUILDKIT=1 docker build --build-arg copa_version=${COPA_VERSION} -t copa-action .
+          docker build --build-arg copa_version=${COPA_VERSION} -t copa-action .
           docker run --net=host \
             --mount=type=bind,source=/tmp,target=/data \
-            --mount=type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock \
+            --mount=type=bind,source=$socket_path,target=$socket_path \
             --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT \
             --name=copa-action \
             copa-action 'docker.io/library/nginx:1.21.6' 'nginx.1.21.6.json' '1.21.6-patched' '10m' 'output.json' 'openvex'
