--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -64,6 +64,7 @@ jobs:
       - name: Bats Test
         run: |
           docker info
+          socket_path=$(docker context inspect | jq -r .[0].Endpoints.docker.Host)
           docker build --build-arg copa_version=${COPA_VERSION} -t copa-action .
           docker run --net=host \
             --mount=type=bind,source=/tmp,target=/data \
