--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,6 +58,8 @@ jobs:
           url=$(docker context inspect | jq -r .[0].Endpoints.docker.Host)
           socket_path=$(echo "$url" | awk -F// '{print $2}')
 
+          echo "$socket_path"
+
           docker build --build-arg copa_version=${COPA_VERSION} -t copa-action .
           docker run --net=host \
             --mount=type=bind,source=/tmp,target=/data \
