--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,18 +52,20 @@ jobs:
                 "containerd-snapshotter": true
               }
             }
-      
-      - name: Bats Test
+
+      - name: Get socket path
         run: |
           url=$(docker context inspect | jq -r .[0].Endpoints.docker.Host)
           socket_path=$(echo "$url" | awk -F// '{print $2}')
-
           echo "$socket_path"
-
+          echo "SOCKET=$socket_path" >> $GITHUB_ENV
+      
+      - name: Bats Test
+        run: |
           docker build --build-arg copa_version=${COPA_VERSION} -t copa-action .
           docker run --net=host \
             --mount=type=bind,source=/tmp,target=/data \
-            --mount=type=bind,source=$socket_path,target=$socket_path \
+            --mount=type=bind,source=$SOCKET,target=$SOCKET \
             --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT \
             --name=copa-action \
             copa-action 'docker.io/library/nginx:1.21.6' 'nginx.1.21.6.json' '1.21.6-patched' '10m' 'output.json' 'openvex'
