--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,6 +18,26 @@ jobs:
       - name: Check out code
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
 
+      - name: Set up Docker if buildkitd not provided
+          uses: crazy-max/ghaction-setup-docker@v3
+          if: ${{ !inputs.buildkitd }}
+          with:
+            daemon-config: |
+              {
+                "debug": true,
+                "experimental": true,
+                  "features": {
+                    "containerd-snapshotter": true
+                  }
+              }
+
+      - name: Get socket path
+        run: |
+          url=$(docker context inspect | jq -r .[0].Endpoints.docker.Host)
+          socket_path=$(echo "$url" | awk -F// '{print $2}')
+          echo "$socket_path"
+          echo "SOCKET=$socket_path" >> $GITHUB_ENV
+
       - name: Install Trivy
         run: |
             curl -fsSL -o trivy.tar.gz https://github.com/aquasecurity/trivy/releases/download/v${{ env.TRIVY_VERSION }}/trivy_${{ env.TRIVY_VERSION }}_Linux-64bit.tar.gz
@@ -46,7 +66,7 @@ jobs:
           docker build --build-arg copa_version=${COPA_VERSION} -t copa-action .
           docker run --net=host \
             --mount=type=bind,source=/tmp,target=/data \
-            --mount=type=bind,source="/var/run/docker.sock",target="/var/run/docker.sock" \
+            --mount=type=bind,source=$SOCKET,target="/var/run/docker.sock" \
             --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT \
             --name=copa-action \
             copa-action 'docker.io/library/nginx:1.21.6' 'nginx.1.21.6.json' '1.21.6-patched' '10m' 'output.json' 'openvex'
