--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -51,27 +51,8 @@ jobs:
         # use a tag (such as v1 or v1.0.1) at a bare minimum
         # recommendation is to pin to a digest for security and stability
         # and rely on dependabot for digest/version updates
-        uses: project-copacetic/copa-action@main
+        uses: ashnamehrotra/copa-action@v0.1.0
         with:
           image: ${{ matrix.images }}
           image-report: "report.json"
           patched-tag: "patched"
-          # buildkit-version: "v0.12.4" # optional, default is latest
-          # copa-version: "0.6.0" # optional, default is latest
-
-        # see https://github.com/docker/login-action#usage for other registries
-      - name: Login to GHCR
-        if: steps.copa.conclusion == 'success'
-        id: login
-        uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d # v3.0.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Push patched image
-        if: steps.login.conclusion == 'success'
-        run: |
-          # retag if needed
-          docker tag ${{ steps.copa.outputs.patched-image }} ghcr.io/project-copacetic/copa-action/test/${{ steps.copa.outputs.patched-image }}
-          docker push ghcr.io/project-copacetic/copa-action/test/${{ steps.copa.outputs.patched-image }}
