--- a/action.yaml
+++ b/action.yaml
@@ -25,6 +25,8 @@ inputs:
   format:
     description: "Output format"
     default: "openvex"
+  custom-socket-path:
+    description: "Custom docker socket path to mount"
 outputs:
   patched-image:
     description: 'Image reference of patched image'
@@ -38,27 +40,9 @@ runs:
       run: |
         docker run --net=host --detach --rm --privileged -p 127.0.0.1:8888:8888 --name buildkitd --entrypoint buildkitd moby/buildkit:${{ inputs.buildkit-version }} --addr tcp://0.0.0.0:8888
 
-    - name: Set up Docker if buildkitd not provided
-      uses: crazy-max/ghaction-setup-docker@v3
+    - name: Set up Docker Buildx
       if: ${{ !inputs.buildkitd }}
-      with:
-        daemon-config: |
-          {
-            "debug": true,
-            "experimental": true,
-              "features": {
-                "containerd-snapshotter": true
-              }
-          }
-
-    - name: Get socket path
-      if: ${{ !inputs.buildkitd }}
-      shell: bash
-      run: |
-        url=$(docker context inspect | jq -r .[0].Endpoints.docker.Host)
-        socket_path=$(echo "$url" | awk -F// '{print $2}')
-        echo "$socket_path"
-        echo "SOCKET=$socket_path" >> $GITHUB_ENV
+      uses: docker/setup-buildx-action@v3
 
     - name: Docker run copa-action
       id: copa-action
@@ -72,7 +56,7 @@ runs:
         fi
 
         if [ -z "${{ inputs.buildkit-version }}" ]; then
-          docker run --net=host --mount=type=bind,source=$(pwd),target=/data --mount=type=bind,source=$SOCKET,target="/var/run/docker.sock" --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT --name=copa-action "ghcr.io/project-copacetic/copa-action:v$version" ${{ inputs.image }} ${{ inputs.image-report }} ${{ inputs.patched-tag }} ${{ inputs.timeout }} ${{ inputs.output }} ${{ inputs.format }}
+          docker run --net=host --mount=type=bind,source=$(pwd),target=/data --mount=type=bind,source="/var/run/docker.sock",target="/var/run/docker.sock" --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT --name=copa-action "ashnam/copa-action:test" ${{ inputs.image }} ${{ inputs.image-report }} ${{ inputs.patched-tag }} ${{ inputs.timeout }} ${{ inputs.output }} ${{ inputs.format }}
         else
-          docker run --net=host --mount=type=bind,source=$(pwd),target=/data --mount=type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT --name=copa-action "ghcr.io/project-copacetic/copa-action:v$version" ${{ inputs.image }} ${{ inputs.image-report }} ${{ inputs.patched-tag }} ${{ inputs.timeout }} ${{ inputs.output }} ${{ inputs.format }} ${{ inputs.buildkit-version }}
+          docker run --net=host --mount=type=bind,source=$(pwd),target=/data --mount=type=bind,source="/var/run/docker.sock",target="/var/run/docker.sock" --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT --name=copa-action "ashnam/copa-action:test" ${{ inputs.image }} ${{ inputs.image-report }} ${{ inputs.patched-tag }} ${{ inputs.timeout }} ${{ inputs.output }} ${{ inputs.format }} ${{ inputs.buildkit-version }}
         fi
