specify copa-action
Signed-off-by: ashnamehrotra <ashnamehrotra@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -47,7 +47,7 @@ jobs:
           docker buildx create --name copa-action
           echo "using buildx instance"
           docker buildx use --builder copa-action
-          docker buildx use --default
+          docker buildx use --default copa-action
 
       - name: Debugging
         run : |
