--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,6 +45,10 @@ jobs:
         run : |
           docker buildx create --name copa-action
           docker buildx use --default copa-action
+
+      - name: Debug
+        run: |
+          docker buildx ls
         
       - name: Bats Test
         run: |
