--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,11 +40,9 @@ jobs:
             curl --retry 5 -fsSL -o copa.tar.gz https://github.com/project-copacetic/copacetic/releases/download/v${COPA_VERSION}/copa_${COPA_VERSION}_linux_amd64.tar.gz
             tar -zxvf copa.tar.gz
             cp copa /usr/local/bin/
-      
-      - name: Try Docker buildx use
-        run : |
-          docker buildx create --name copa-action
-          docker buildx use --default copa-action
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Debug
         run: |
