--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -56,3 +56,7 @@ jobs:
           image: ${{ matrix.images }}
           image-report: "report.json"
           patched-tag: "patched"
+          copa-version: "0.3.0"
+
+
+# test also w older copa version and buildkitd address and no output
