--- a/action.yaml
+++ b/action.yaml
@@ -37,6 +37,7 @@ runs:
       shell: bash
       if: ${{ inputs.buildkitd }}
       run: |
+        echo "HERE"
         docker run --net=host --detach --rm --privileged -p 127.0.0.1:8888:8888 --name buildkitd --entrypoint buildkitd moby/buildkit:${{ inputs.buildkit-version }} --addr tcp://0.0.0.0:8888
 
     - name: Docker run copa-action
