--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -56,7 +56,7 @@ jobs:
           image: ${{ matrix.images }}
           image-report: "report.json"
           patched-tag: "patched"
-          copa-version: "0.3.0"
+          # copa-version: "0.3.0"
           buildkit-version: "v0.12.5"
 
 
