cleanup + test 1 - containerd img store
Signed-off-by: ashnamehrotra <ashnamehrotra@gmail.com>

--- a/action.yaml
+++ b/action.yaml
@@ -27,7 +27,7 @@ inputs:
     description: "Output format"
     default: "openvex"
   custom-socket:
-    default: "/var/run/run/docker.sock"
+    description: "custom socket address if setting up containerd image store"
 outputs:
   patched-image:
     description: 'Image reference of patched image'
@@ -39,6 +39,7 @@ runs:
       id: copa-action
       shell: bash
       run : |
+        # check for copa version, else use latest
         if [ -z "${{ inputs.copa-version }}" ]; then
           latest_tag=$(curl --retry 5 -s "https://api.github.com/repos/project-copacetic/copacetic/releases/latest" | jq -r '.tag_name')
           version=${latest_tag:1}
@@ -46,9 +47,18 @@ runs:
           version="${{ inputs.copa-version }}"
         fi
 
-        if [ -z "${{ inputs.buildkit-version }}" ]; then
+        # check for custom docker socket input (ex/ to enable containerd image store for local image patching)
+        if [ -n "{{ inputs.custom-socket}}"]; then
           docker run --net=host --mount=type=bind,source=$(pwd),target=/data --mount=type=bind,source="${{ inputs.custom-socket }}",target="/var/run/docker.sock" --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT --name=copa-action "ashnam/copa-action:test" ${{ inputs.image }} ${{ inputs.image-report }} ${{ inputs.patched-tag }} ${{ inputs.timeout }} ${{ inputs.output }} ${{ inputs.format }}
-        else
+        
+        # check for buildkit version input for connection through a buildkit container
+        elif [ -m "${{ inputs.buildkit-version }}" ]; then
           docker run --net=host --detach --rm --privileged -p 127.0.0.1:8888:8888 --name buildkitd --entrypoint buildkitd moby/buildkit:${{ inputs.buildkit-version }} --addr tcp://0.0.0.0:8888
-          docker run --net=host --mount=type=bind,source=$(pwd),target=/data --mount=type=bind,source="/var/run/docker.sock",target="/var/run/docker.sock" --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT --name=copa-action "ashnam/copa-action:test" ${{ inputs.image }} ${{ inputs.image-report }} ${{ inputs.patched-tag }} ${{ inputs.timeout }} ${{ inputs.output }} ${{ inputs.format }} ${{ inputs.buildkit-version }}
+          docker run --net=host --mount=type=bind,source=$(pwd),target=/data --mount=type=bind,source="/var/run/docker.sock",target="/var/run/docker.sock" --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT --name=copa-action "ashnam/copa-action:test" ${{ inputs.image }} ${{ inputs.image-report }} ${{ inputs.patched-tag }} ${{ inputs.timeout }} ${{ inputs.output }} ${{ inputs.format }} "--addr tcp://127.0.0.1:8888"
+        
+        # default is to set up and connect copa via buildx instance
+        else 
+          docker buildx create --name=copa-action
+          docker buildx use --default copa-action
+          docker run --net=host --mount=type=bind,source=$(pwd),target=/data --mount=type=bind,source="/var/run/docker.sock",target="/var/run/docker.sock" --mount=type=bind,source=$GITHUB_OUTPUT,target=$GITHUB_OUTPUT -e GITHUB_OUTPUT --name=copa-action "ashnam/copa-action:test" ${{ inputs.image }} ${{ inputs.image-report }} ${{ inputs.patched-tag }} ${{ inputs.timeout }} ${{ inputs.output }} ${{ inputs.format }} "--addr buildx://copa-action"
         fi
