--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -77,4 +77,4 @@ jobs:
           image: ${{ matrix.images }}
           image-report: "report.json"
           patched-tag: "patched"
-          custom-socket: "$SOCKET"
+          # custom-socket: "$SOCKET"
