--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -78,3 +78,4 @@ jobs:
           image-report: "report.json"
           patched-tag: "patched"
           # custom-socket: "$SOCKET"
+          buildkit-version: "v0.12.5"
