--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -93,6 +93,7 @@ jobs:
       - name: Push patched image
         if: steps.login.conclusion == 'success'
         run: |
+          docker images
           # retag if needed
           docker tag ${{ steps.copa.outputs.patched-image }} ghcr.io/ashnamehrotra/copa-action/test/${{ steps.copa.outputs.patched-image }}
           docker push ghcr.io/ashnamehrotra/copa-action/test/${{ steps.copa.outputs.patched-image }}
