--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -99,6 +99,7 @@ jobs:
         if: steps.login.conclusion == 'success'
         run: |
           docker images
+          docker context ls
           # retag if needed
           docker tag ${{ steps.copa.outputs.patched-image }} ghcr.io/ashnamehrotra/copa-action/test/${{ steps.copa.outputs.patched-image }}
           docker push ghcr.io/ashnamehrotra/copa-action/test/${{ steps.copa.outputs.patched-image }}
