set docker context use
Signed-off-by: ashnamehrotra <ashnamehrotra@gmail.com>

--- a/.github/workflows/patch.yaml
+++ b/.github/workflows/patch.yaml
@@ -67,6 +67,7 @@ jobs:
         run: |
           docker context ls
           docker context inspect
+          docker context use setup-docker-action
 
         # copa action will only run if there are vulnerabilities
       - name: Run Copa action
